    - Added 'dom-native' trait for native wrapping of simple methods
    - DOM method appendTextChild now returns the added element
    - Fix for #36 - failing close() count tests (due to erratic
      calling of close callback)
    - Rename config methods: keep-blanks-default() -> keep-blanks(),
      default-parser-flags() -> parser-flags()
0.3.1 2020-04-29
    - Add $node.ACCEPTS() method for XPath matching, e.g.:
      'self::foo' ~~ $node
    - renamed github project p6-xml -> libxml-raku
    - moved directory doc/ -> docs/
0.3.0 2020-02-08
    - Rename module source files *.pm6 -> *.rakumod
0.2.7 2020-01-14
    - [LibXML::Native] - Fixes to 'rw-ptr' and 'rw-str' for Rakudo 2019.11+ Blead
0.2.6 2019-12-13
    - Replaces references to Perl with Raku
    - This includes LICENSE sections of 'Perl' with 'Artistic'. Replace
      LICENSE file with a more recent version of the Artistic license.
    - Fixes for Rakudo 2018.10
0.2.4 2019-12-08
    - [xml6_gbl.c]
      Add xml6_gbl_save_error_handlers() and xml6_gbl_restore_error_handlers().
    - [LibXML::XPath::Context]
      -- save/restore error handlers
    - [LibXML::ErrorHandling][LibXML::Reader][LibXML::Schema][LibXML::RelaxNG]
      -- save/restore error handlers
      -- Replace X::LibXML::Reader::OpFail with X::LibXML::OpFail. Fix usage
         in schema and relax-ng.
    - [LibXML::{Pattern|Dtd|Schema|RelaxNg|RegExp}]
      -- Added ACCEPTS() multi methods for more Rakuish matching, e.g.:
          $node ~~ $pattern; $doc ~~ $dtd; "abc" ~~ $regexp
    - [t/26schema.t][t/43options.t] fix tests that were accessing the network #32
      (were failing when http/https was not available).
0.2.3 2019-12-05
    - [dom.c][LibXML::Node] take out case conversion from domXPathGetKey()
      .xpath-key() to case handling semantics. tags are converted to
      lowercase on :html parse., but retain case when from the API.
      XPath searches then need to match the case (see 12html.t).