@@ -15,6 +15,7 @@
       calling of close callback)
     - Rename config methods: keep-blanks-default() -> keep-blanks(),
       default-parser-flags() -> parser-flags()
+    - Issue#37 fix mixup between XmlStandaloneYes and XmlStandaloneNo
 0.3.1 2020-04-29
     - Add $node.ACCEPTS() method for XPath matching, e.g.:
       'self::foo' ~~ $node
